crates/swc_ecma_parser/tests/test262-error-references/fail/971cf622ebaef28e.js.stderr
error: Declaration is now allowed
 --> $DIR/tests/test262-parser/fail/971cf622ebaef28e.js:1:12
  |
1 | with(true) class a {}
  |            ^^^^^

